2 February 2007: Wouter
	- Created udp4 and udp6 port arrays to provide service for both
	  address families.
	- uses IPV6_USE_MIN_MTU for udp6 ,IPV6_V6ONLY to make ip6 sockets.
	- listens on both ip4 and ip6 ports to provide correct return address.

1 February 2007: Wouter
	- outside network more UDP work.
	- moved * closer to type.
	- comm_timer object and events.

31 January 2007: Wouter
	- Added makedist.sh script to make release tarball.
	- Removed listen callback layer, did not add anything.
	- Added UDP recv to netevent, worker callback for udp.
	- netevent communication reply storage structure.
	- minimal query header sanity checking for worker.
	- copied over rbtree implementation from NSD (BSD licensed too).
	- outgoing network query service work.

30 January 2007: Wouter
	- links in example/ldns-testpkts.c and .h for premade packet support.
	- added callback argument to listen_dnsport and daemon/worker.

29 January 2007: Wouter
	- unbound.8 a short manpage.

26 January 2007: Wouter
	- fixed memleak.
	- make lint works on BSD and Linux (openssl defines).
	- make tags works.
	- testbound program start.

25 January 2007: Wouter
	- fixed lint so it may work on BSD.
	- put license into header of every file.
	- created verbosity flag.
	- fixed libevent configure flag.
	- detects event_base_free() in new libevent 1.2 version.
	- getopt in daemon. fatal_exit() and verbose() logging funcs.
	- created log_assert, that throws assertions to the logfile.
	- listen_dnsport service. Binds ports.

24  January 2007: Wouter
	- cleaned up configure.ac.

23  January 2007: Wouter
	- added libevent to configure to link with.
	- util/netevent setup work.
	- configure searches for libevent.
	- search for libs at end of configure (when other headers and types
	  have been found).
	- doxygen works with ATTR_UNUSED().
	- util/netevent implementation.

22  January 2007: Wouter
	- Designed header file for network communication.

16  January 2007: Wouter