@@ -3,6 +3,8 @@
 	  address families.
 	- uses IPV6_USE_MIN_MTU for udp6 ,IPV6_V6ONLY to make ip6 sockets.
 	- listens on both ip4 and ip6 ports to provide correct return address.
+	- worker fwder address filled correctly.
+	- fixup timer code.
 
 1 February 2007: Wouter
 	- outside network more UDP work.
